add: murkup in header

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,6 +12,7 @@ $border-color: #E2E2E9;
 $white: #FFF;
 $star: #FFC816;
 $our: #0E0C0D;
+$burger-color: #686466;
 $payment-delivery: #473E43;
 $overlay:  linear-gradient(0deg, rgba(247, 210, 45, 0.40) 0%, rgba(247, 210, 45, 0.40) 100%), rgba(33, 49, 52, 0.20);
 $arrow-slider: rgba(247, 210, 45, 0.90);
@@ -45,5 +46,7 @@ $font-weight600: 600;
 $font-weight700: 700;
 $font-weight800: 800;
 
+// font-family
 
+$font-family: 'Montserrat';
 
