--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -27,14 +29,7 @@ body {
   }
 }
 
-@media (min-width: 990px) {
-
-  .container {
-    max-width: 958px;
-  }
-}
-
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
 
   .container {
     max-width: 1110px;
