--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,7 +19,7 @@ $arrow-slider: rgba(247, 210, 45, 0.90);
 
 
 // font-size
-
+$font-size8: 8px;
 $font-size9: 9px;
 $font-size10: 10px;
 $font-size11: 11px;
