--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -89,6 +89,7 @@
   background: variables.$main-color;
   box-shadow: 0px 4px 38px 0px rgba(0, 0, 0, 0.10);
   transition: variables.$transition;
+  z-index: 1000000;
 }
 
 .headerBottomActive {
@@ -99,6 +100,7 @@
   background: variables.$main-color;
   box-shadow: 0px 4px 38px 0px rgba(0, 0, 0, 0.10);
   transition: variables.$transition;
+  z-index: 1000000;
 }
 
 .logoClose {
