--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,7 @@
 // color, background-color
 
 $main-color: #F7D22D;
+$black: #000;
 $nav-link-color: #0E0C0D;
 $sign-in: #696F7A;
 $request-call-backg: #F3F3F7;
@@ -30,6 +31,7 @@ $font-size15: 15px;
 $font-size16: 16px;
 $font-size17: 17px;
 $font-size18: 18px;
+$font-size19: 19px;
 $font-size20: 20px;
 $font-size21: 21px;
 $font-size22: 22px;
