--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,6 +10,7 @@ $price-color: #231F20;
 $title-product: #797979;
 $descr-product-burger: #686466;
 $border-color: #E2E2E9;
+$backg-color-del-pay: #E3ECF5;
 $white: #FFF;
 $star: #FFC816;
 $our: #0E0C0D;
