--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,21 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  padding: 0;
+}
+
+h1, h2, h3 {
+  padding: 0;
+  margin: 0;
+}
+
 .container {
   margin: 0 auto;
 }
