--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -41,6 +41,7 @@ $font-size26: 26px;
 $font-size30: 30px;
 $font-size32: 32px;
 $font-size36: 36px;
+$font-size38: 38px;
 $font-size44: 44px;
 
 // font-weight
