--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -20,7 +20,7 @@ button {
   padding: 0;
 }
 
-h1, h2, h3 {
+h1, h2, h3, p {
   padding: 0;
   margin: 0;
 }
