--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -18,6 +18,7 @@ $burger-color: #686466;
 $payment-delivery: #473E43;
 $overlay:  linear-gradient(0deg, rgba(247, 210, 45, 0.40) 0%, rgba(247, 210, 45, 0.40) 100%), rgba(33, 49, 52, 0.20);
 $arrow-slider: rgba(247, 210, 45, 0.90);
+$delete: lightgrey;
 
 
 // font-size
@@ -43,9 +44,11 @@ $font-size32: 32px;
 $font-size36: 36px;
 $font-size38: 38px;
 $font-size44: 44px;
+$font-size58: 58px;
 
 // font-weight
 
+$font-weight400: 400;
 $font-weight500: 500;
 $font-weight600: 600;
 $font-weight700: 700;
