--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -15,11 +15,14 @@ $backg-color-del-pay: #E3ECF5;
 $white: #FFF;
 $star: #FFC816;
 $our: #0E0C0D;
+$sizes: #828792;
 $burger-color: #686466;
 $payment-delivery: #473E43;
 $overlay:  linear-gradient(0deg, rgba(247, 210, 45, 0.40) 0%, rgba(247, 210, 45, 0.40) 100%), rgba(33, 49, 52, 0.20);
+$backg-modal: linear-gradient(0deg, rgba(247, 210, 45, 0.40) 0%, rgba(247, 210, 45, 0.40) 100%), rgba(33, 49, 52, 0.20);
 $arrow-slider: rgba(247, 210, 45, 0.90);
 $delete: lightgrey;
+$box-shadow-content: 0px 4px 28px 0px rgba(0, 0, 0, 0.08), 0px 4px 28px 0px rgba(0, 0, 0, 0.08);
 
 
 // font-size
@@ -46,6 +49,7 @@ $font-size36: 36px;
 $font-size38: 38px;
 $font-size44: 44px;
 $font-size58: 58px;
+$font-size67: 67px;
 
 // font-weight
 
