--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -23,3 +23,14 @@
   font-size: 15px;
   font-weight: 900;
 }
+
+@mixin sizesProp {
+  border-radius: 8px;
+  background: #F3F3F7;
+  color: #828792;
+  font-family: 'Montserrat';
+  font-size: 11px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
