--- a/module/cardProductDetail/cardProductDetail.module.scss
+++ b/module/cardProductDetail/cardProductDetail.module.scss
@@ -115,6 +115,12 @@
   margin-bottom: 20px;
   border-radius: 8px;
   background: variables.$main-color;
+  border: none;
+  cursor: pointer;
+}
+
+.button:disabled {
+  background: variables.$delete;
 }
 
 .activeSize {
