--- a/module/cardProductDetail/cardProductDetail.module.scss
+++ b/module/cardProductDetail/cardProductDetail.module.scss
@@ -8,7 +8,7 @@
 
 .card {
   width: 300px;
-  height: 465px;
+  height: 430px;
   border-radius: 12px;
   background: variables.$white;
   box-shadow: variables.$box-shadow-content;
@@ -275,5 +275,20 @@
   .button {
     width: 330px;
     height: 59px;
+    transition: variables.$transition;
+    &:hover {
+      transition: variables.$transition;
+      background: variables.$hover;
+    }
+    &:active {
+      background: variables.$active;
+    }
+    &:disabled {
+      transition: variables.$transition;
+      &:hover {
+        transition: variables.$transition;
+        background: variables.$delete;
+      }
+    }
   }
 }
