add: creating user

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -45,6 +45,7 @@ $font-size20: 20px;
 $font-size21: 21px;
 $font-size22: 22px;
 $font-size24: 24px;
+$font-size25: 25px;
 $font-size26: 26px;
 $font-size30: 30px;
 $font-size32: 32px;
