--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -143,6 +143,9 @@
   text-decoration: none;
   margin: 0 auto;
   margin-top: 13px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
