--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -49,6 +49,7 @@ $font-size25: 25px;
 $font-size26: 26px;
 $font-size30: 30px;
 $font-size32: 32px;
+$font-size34: 34px;
 $font-size36: 36px;
 $font-size38: 38px;
 $font-size44: 44px;
