--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -148,6 +148,19 @@
   cursor: pointer;
 }
 
+.personal {
+  display: block;
+  padding: variables.$padding-click-link;
+  color: variables.$sign-in;
+  font-family: variables.$font-family;
+  font-size: variables.$font-size16;
+  font-weight: variables.$font-weight700;
+  text-decoration: none;
+  margin: 0 auto;
+  margin-top: 13px;
+  text-align: center;
+}
+
 @media (min-width: 768px) {
   .header {
     padding: 20px 20px 0px 20px;
@@ -213,7 +226,7 @@
 
   .headerBottom {
     width: 140px;
-    height: 374px;
+    height: 385px;
     border-radius: 5px;
     background: variables.$white;
     box-shadow: 0px 4px 38px 0px rgba(0, 0, 0, 0.10);
