--- a/module/bonus/bonus.module.scss
+++ b/module/bonus/bonus.module.scss
@@ -13,16 +13,23 @@
   font-weight: variables.$font-weight800;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 255px;
+  grid-template-rows: auto;
+  gap: 15px;
+  margin-top: 32px;
+}
+
 .bonusCard {
   @include mixins.flex(flex, center, center);
   flex-direction: column;
-  width: 255px;
-  height: 288px;
+  width: 100%;
+  height: 100%;
   border-radius: 8px;
   background: variables.$white;
   box-shadow: 0px 4px 28px 0px rgba(0, 0, 0, 0.08);
   padding: 47px 67px 48px 47px;
-  margin-top: 32px;
 }
 
 .img {
@@ -47,6 +54,34 @@
   font-size: variables.$font-size15;
   font-weight: variables.$font-weight700;
   margin-top: 26px;
-  text-decoration: dashed;
-  -webkit-text-decoration: dashed;
+}
+
+@media(min-width: 768px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 255px);
+    grid-template-rows: repeat(1, 288px);
+    grid-auto-rows: 288px;
+    gap: 15px;
+    margin-top: 32px;
+  }
+}
+
+@media(min-width: 1200px) {
+  .h2 {
+    font-size: variables.$font-size34;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 255px);
+    grid-template-rows: repeat(1, 338px);
+    grid-auto-rows: 338px;
+    gap: 15px;
+    margin-top: 32px;
+  }
+
+  .link {
+    margin-top: 42px;
+  }
 }
