--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -27,6 +27,9 @@ $hover: #F2C519;
 $active: #FFDF00;
 $background-active: darkgray;
 $transition: 0.5s all;
+$input-backg: rgba(241, 242, 245, 0.60);
+$success: green;
+$fail: red;
 
 // font-size
 $font-size8: 8px;
