--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -30,6 +30,9 @@ $transition: 0.5s all;
 $input-backg: rgba(241, 242, 245, 0.60);
 $success: green;
 $fail: red;
+$signOut: #696F7A;
+$signOutLight: #8e939c;
+$signOutMoreLight: rgb(221, 228, 226);
 
 // font-size
 $font-size8: 8px;
