--- a/module/registration/registration.module.scss
+++ b/module/registration/registration.module.scss
@@ -97,6 +97,7 @@
   font-size: variables.$font-size13;
   font-weight: variables.$font-weight400;
   color: variables.$success;
+  margin-top: 5px;
 }
 
 .fail {
@@ -104,6 +105,7 @@
   font-size: variables.$font-size13;
   font-weight: variables.$font-weight400;
   color: variables.$fail;
+  margin-top: 5px;
 }
 
 @media(min-width: 768px) {
@@ -134,5 +136,19 @@
     width: 345px;
     margin: 0 auto;
     margin-top: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .button {
+    transition: variables.$transition;
+    &:hover {
+      transition: variables.$transition;
+      background: variables.$hover;
+      color: variables.$black;
+    }
+    &:active {
+      background: variables.$active;
+    }
   }
 }
