--- a/components/contacts/contacts.module.scss
+++ b/components/contacts/contacts.module.scss
@@ -6,7 +6,7 @@
 }
 
 .map {
-  width: 300px;
+  width: 100%;
   height: 322px;
   margin: 0;
 }
@@ -62,4 +62,9 @@
     font-size: variables.$font-size15;
     margin-top: 10px;
   }
+
+  .map {
+    margin-top: 10px;
+  }
+
 }
