--- a/module/bonusForm/bonus-form.module.scss
+++ b/module/bonusForm/bonus-form.module.scss
@@ -89,6 +89,14 @@
   margin-top: 30px;
 }
 
+.error {
+  color: variables.$fail;
+}
+
+.errorInput {
+  border: 1px solid variables.$fail;
+}
+
 @media (min-width: 1200px) {
   .h2 {
     font-size: variables.$font-size30;
