--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -33,6 +33,7 @@ $fail: red;
 $signOut: #696F7A;
 $signOutLight: #8e939c;
 $signOutMoreLight: rgb(221, 228, 226);
+$hr: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
 
 // font-size
 $font-size8: 8px;
