--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -55,6 +55,7 @@ $font-size22: 22px;
 $font-size24: 24px;
 $font-size25: 25px;
 $font-size26: 26px;
+$font-size28: 28px;
 $font-size30: 30px;
 $font-size32: 32px;
 $font-size34: 34px;
