--- a/module/orderForm/order-form.module.scss
+++ b/module/orderForm/order-form.module.scss
@@ -2,8 +2,9 @@
 @use '../../styles/mixins.scss';
 
 .orderForm {
-  @include mixins.flex(flex, center, flex-start);
+  @include mixins.flex(flex, center, center);
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .label {
@@ -12,6 +13,8 @@
   font-size: variables.$font-size15;
   font-weight: variables.$font-weight600;
   margin-top: 14px;
+  display: block;
+  cursor: pointer;
   &:first-child {
     margin-top: 20px;
   }
@@ -39,6 +42,10 @@
 }
 
 .error {
+  color: variables.$fail;
+}
+
+.error2 {
   color: variables.$fail;
 }
 
@@ -72,6 +79,7 @@
   font-family: variables.$font-family;
   font-size: variables.$font-size16;
   font-weight: variables.$font-weight600;
+  cursor: pointer;
 }
 
 .cardLabel:before {
@@ -132,6 +140,7 @@
   font-family: variables.$font-family;
   font-size: variables.$font-size16;
   font-weight: variables.$font-weight600;
+  cursor: pointer;
 }
 
 .cardLabel2:before {
@@ -198,7 +207,7 @@
 }
 
 .cvcBlock {
-  @include mixins.flex(flex, center, center);
+  @include mixins.flex(flex, flex-start, center);
   gap: 10px;
   margin-top: 10px;
 }
@@ -260,6 +269,7 @@
   border: none;
   margin: 0 auto;
   margin-top: 44px;
+  cursor: pointer;
   &:disabled {
     background: variables.$delete;
   }
@@ -275,4 +285,83 @@
   text-decoration: none;
   margin: 0 auto;
   margin-top: 14px;
+}
+
+@media(min-width: 768px) {
+  .mainWrapper {
+    display: flex;
+    gap: 42px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .mainWrapper {
+    display: flex;
+    gap: 42px;
+  }
+
+  .inputLabel {
+    display: flex;
+    justify-content: space-between;
+    gap: 31px;
+  }
+
+  .input {
+    width: 539px;
+    margin-top: 14px;
+  }
+
+  .textarea {
+    width: 539px;
+    margin-top: 14px;
+  }
+
+  .error {
+    margin-left: 181px;
+  }
+
+  .h2 {
+    font-size: variables.$font-size28;
+    font-weight: variables.$font-weight700;
+  }
+
+  .cardLabel {
+    font-size: variables.$font-size18;
+  }
+
+  .radio {
+    width: 255px;
+  }
+
+  .radio2 {
+    margin-top: 28px;
+  }
+
+  .numberCard {
+    width: 322px;
+  }
+
+  .date {
+    width: 202px;
+  }
+
+  .cardLabel2 {
+    font-size: variables.$font-size18;
+  }
+
+  .wrapOrderLink {
+    @include mixins.flex(flex, center, center);
+    flex-direction: row-reverse;
+    margin-right: auto;
+    gap: 269px;
+    margin-top: 51px;
+  }
+
+  .back {
+    margin-top: 0;
+  }
+
+  .buy {
+    margin-top: 0;
+  }
 }
