fix: add hide navbar when we click to personal cabinet and basket

--- a/module/bonusForm/bonus-form.module.scss
+++ b/module/bonusForm/bonus-form.module.scss
@@ -109,6 +109,7 @@
   font-size: variables.$font-size14;
   font-weight: variables.$font-weight700;
   margin-left: 35px;
+  cursor: pointer;
 }
 
 .labelCheck:before {
