--- a/components/basket/basket.module.scss
+++ b/components/basket/basket.module.scss
@@ -74,6 +74,10 @@
 }
 
 @media(min-width: 768px) {
+  .hr1 {
+    margin-top: 10px;
+  }
+  
   .backCheck {
     @include mixins.flex(flex, space-between, center);
     flex-direction: row-reverse;
