--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -35,6 +35,7 @@ $signOutLight: #8e939c;
 $signOutMoreLight: rgb(221, 228, 226);
 $hr: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
 $freeDel: #213134;
+$politic: #9D9D9B;
 
 // font-size
 $font-size8: 8px;
