--- a/module/callOrder/call-order.module.scss
+++ b/module/callOrder/call-order.module.scss
@@ -95,3 +95,40 @@
   margin-top: 5px;
 }
 
+@media (min-width: 768px) {
+  .form {
+    gap: 8px;
+  }
+
+  .callOrder {
+    width: 668px;
+  }
+
+  .close {
+    top: 20px;
+    right: 40px;
+  }
+
+  .label {
+    margin-top: 10px;
+  }
+
+  .title {
+    font-size: variables.$font-size32;
+    text-align: center;
+  }
+
+  .phone {
+    width: 300px;
+  }
+
+  .text {
+    width: 300px;
+    font-size: variables.$font-size12;
+  }
+
+  .button {
+    width: 300px;
+    margin-top: 5px;
+  }
+}
