add: hover to the button in call-order comp

--- a/module/callOrder/call-order.module.scss
+++ b/module/callOrder/call-order.module.scss
@@ -140,3 +140,16 @@
     margin-top: 5px;
   }
 }
+
+@media(min-width: 992px) {
+  .button {
+    transition: variables.$transition;
+    &:hover {
+      transition: variables.$transition;
+      background: variables.$hover;
+    }
+    &:active {
+      background: variables.$active;
+    }
+  }
+}
